--- a/resources.qrc
+++ b/resources.qrc
@@ -24,5 +24,7 @@
         <file alias="x-office-address-book.svg">icons/x-office-address-book.svg</file>
         <file alias="go-top.svg">icons/go-top.svg</file>
         <file alias="preferences-system.svg">icons/preferences-system.svg</file>
+        <file alias="edit-copy.svg">icons/edit-copy.svg</file>
+        <file alias="edit-clear.svg">icons/edit-clear.svg</file>
     </qresource>
 </RCC>
