--- a/usersdialog.ui
+++ b/usersdialog.ui
@@ -54,7 +54,14 @@ Red entries are not valid, you will not be able to encrypt to these.</string>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QLineEdit" name="lineEdit"/>
+      <widget class="QLineEdit" name="lineEdit">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>26</height>
+        </size>
+       </property>
+      </widget>
      </item>
      <item>
       <widget class="QToolButton" name="clearButton">
@@ -63,7 +70,8 @@ Red entries are not valid, you will not be able to encrypt to these.</string>
        </property>
        <property name="icon">
         <iconset theme="edit-clear">
-         <normaloff>.</normaloff>.</iconset>
+         <normalon>:/icons/edit-clear.svg</normalon>
+        </iconset>
        </property>
       </widget>
      </item>
