Default text solves #84

--- a/passworddialog.ui
+++ b/passworddialog.ui
@@ -45,8 +45,14 @@
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
          <widget class="QLineEdit" name="lineEditPassword">
+          <property name="text">
+           <string/>
+          </property>
           <property name="echoMode">
            <enum>QLineEdit::Password</enum>
+          </property>
+          <property name="placeholderText">
+           <string>Password</string>
           </property>
          </widget>
         </item>
