--- a/passworddialog.ui
+++ b/passworddialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>425</width>
-    <height>359</height>
+    <width>504</width>
+    <height>300</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -69,27 +69,93 @@
        </layout>
       </item>
       <item>
-       <widget class="QCheckBox" name="checkBoxShow">
-        <property name="text">
-         <string>Show password</string>
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <property name="topMargin">
+         <number>0</number>
         </property>
-       </widget>
+        <item>
+         <widget class="QCheckBox" name="checkBoxShow">
+          <property name="text">
+           <string>Show password</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_Char">
+          <item>
+           <widget class="QLabel" name="label_characterset">
+            <property name="text">
+             <string>Character Set:</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QComboBox" name="passwordTemplateSwitch">
+            <item>
+             <property name="text">
+              <string>All Characters</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Alphabetical</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Alphanumerical</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Custom</string>
+             </property>
+            </item>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_length">
+          <item>
+           <widget class="QLabel" name="label_length">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="text">
+             <string>Length:</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QSpinBox" name="spinBox_pwdLength">
+            <property name="minimum">
+             <number>8</number>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+       </layout>
       </item>
       <item>
-       <layout class="QFormLayout" name="formLayout">
-        <property name="sizeConstraint">
-         <enum>QLayout::SetDefaultConstraint</enum>
-        </property>
-        <property name="fieldGrowthPolicy">
-         <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
-        </property>
-        <property name="labelAlignment">
-         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-        </property>
-        <property name="formAlignment">
-         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
-        </property>
-       </layout>
+       <layout class="QFormLayout" name="formLayout"/>
       </item>
       <item>
        <widget class="QPlainTextEdit" name="plainTextEdit"/>
@@ -112,7 +178,6 @@
  <tabstops>
   <tabstop>lineEditPassword</tabstop>
   <tabstop>createPasswordButton</tabstop>
-  <tabstop>checkBoxShow</tabstop>
   <tabstop>plainTextEdit</tabstop>
  </tabstops>
  <resources/>
