--- a/keygendialog.ui
+++ b/keygendialog.ui
@@ -144,6 +144,12 @@
         <property name="enabled">
          <bool>false</bool>
         </property>
+        <property name="frameShape">
+         <enum>QFrame::StyledPanel</enum>
+        </property>
+        <property name="frameShadow">
+         <enum>QFrame::Plain</enum>
+        </property>
         <property name="readOnly">
          <bool>true</bool>
         </property>
