--- a/usersdialog.ui
+++ b/usersdialog.ui
@@ -77,6 +77,9 @@ Red entries are not valid, you will not be able to encrypt to these.</string>
    </item>
    <item>
     <widget class="QListWidget" name="listWidget">
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
+     </property>
      <property name="alternatingRowColors">
       <bool>true</bool>
      </property>
