--- a/passworddialog.ui
+++ b/passworddialog.ui
@@ -6,28 +6,34 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>504</width>
-    <height>300</height>
+    <width>497</width>
+    <height>263</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Password</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2">
+  <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0">
    <property name="leftMargin">
-    <number>6</number>
+    <number>0</number>
    </property>
    <property name="topMargin">
     <number>6</number>
    </property>
    <property name="rightMargin">
-    <number>6</number>
+    <number>0</number>
    </property>
    <property name="bottomMargin">
-    <number>6</number>
+    <number>0</number>
    </property>
    <item>
     <widget class="QWidget" name="widget" native="true">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <property name="leftMargin">
        <number>0</number>
@@ -70,9 +76,6 @@
       </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
-        <property name="topMargin">
-         <number>0</number>
-        </property>
         <item>
          <widget class="QCheckBox" name="checkBoxShow">
           <property name="text">
@@ -94,68 +97,77 @@
          </spacer>
         </item>
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_Char">
-          <item>
-           <widget class="QLabel" name="label_characterset">
-            <property name="text">
-             <string>Character Set:</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QComboBox" name="passwordTemplateSwitch">
-            <item>
-             <property name="text">
-              <string>All Characters</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Alphabetical</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Alphanumerical</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Custom</string>
-             </property>
-            </item>
-           </widget>
-          </item>
-         </layout>
+         <widget class="QLabel" name="label_characterset">
+          <property name="text">
+           <string>Character Set:</string>
+          </property>
+         </widget>
         </item>
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_length">
+         <widget class="QComboBox" name="passwordTemplateSwitch">
           <item>
-           <widget class="QLabel" name="label_length">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="text">
-             <string>Length:</string>
-            </property>
-           </widget>
+           <property name="text">
+            <string>All Characters</string>
+           </property>
           </item>
           <item>
-           <widget class="QSpinBox" name="spinBox_pwdLength">
-            <property name="minimum">
-             <number>8</number>
-            </property>
-           </widget>
+           <property name="text">
+            <string>Alphabetical</string>
+           </property>
           </item>
-         </layout>
+          <item>
+           <property name="text">
+            <string>Alphanumerical</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Custom</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_length">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="text">
+           <string>Length:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QSpinBox" name="spinBox_pwdLength">
+          <property name="minimum">
+           <number>8</number>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
       <item>
-       <layout class="QFormLayout" name="formLayout"/>
+       <layout class="QFormLayout" name="formLayout">
+        <property name="labelAlignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+        </property>
+        <property name="formAlignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+        </property>
+        <item row="0" column="0">
+         <widget class="QLabel" name="testLabel">
+          <property name="text">
+           <string>test</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QLineEdit" name="testLineEdit"/>
+        </item>
+       </layout>
       </item>
       <item>
        <widget class="QPlainTextEdit" name="plainTextEdit"/>
