--- a/configdialog.ui
+++ b/configdialog.ui
@@ -262,6 +262,9 @@
                <property name="minimum">
                 <number>8</number>
                </property>
+               <property name="maximum">
+                <number>255</number>
+               </property>
                <property name="value">
                 <number>16</number>
                </property>
