Increase maximum password length to 255 as fixed in configdialog by @vladimiroff

--- a/passworddialog.ui
+++ b/passworddialog.ui
@@ -145,6 +145,9 @@
           <property name="minimum">
            <number>8</number>
           </property>
+          <property name="maximum">
+           <number>255</number>
+          </property>
          </widget>
         </item>
        </layout>
