--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -293,7 +293,7 @@
          <number>7</number>
         </property>
         <item>
-         <widget class="QLabel" name="Passwordname">
+         <widget class="QLabel" name="passwordName">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
             <horstretch>0</horstretch>
