Add primary selection as clipboard option
QTPass only allowed for the use of the X clipboard. A checkbox has been
added to optionally place the password in the X primary selection
instead.

--- a/src/configdialog.ui
+++ b/src/configdialog.ui
@@ -82,6 +82,13 @@
             </widget>
            </item>
            <item>
+            <widget class="QCheckBox" name="checkBoxSelection">
+             <property name="text">
+              <string>Use primary selection</string>
+             </property>
+            </widget>
+           </item>
+           <item>
             <widget class="QCheckBox" name="checkBoxAutoclear">
              <property name="text">
               <string>Autoclear after:</string>
