Changed 'Password behaviour' label to 'Content panel behaviour', fixes #294

--- a/src/configdialog.ui
+++ b/src/configdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>571</width>
-    <height>604</height>
+    <width>618</width>
+    <height>609</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -140,7 +140,7 @@
             </font>
            </property>
            <property name="text">
-            <string>Password Behaviour:</string>
+            <string>Content panel behaviour:</string>
            </property>
           </widget>
          </item>
