--- a/resources.qrc
+++ b/resources.qrc
@@ -19,6 +19,7 @@
         <file>localization/localization_fr_FR.qm</file>
         <file>localization/localization_en_GB.qm</file>
         <file>localization/localization_en_US.qm</file>
+        <file>localization/localization_pt_PT.qm</file>
     </qresource>
     <qresource prefix="/icons">
         <file alias="document-new.svg">icons/document-new.svg</file>
