PasswordDialog tab order fixes #331

--- a/src/passworddialog.ui
+++ b/src/passworddialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>497</width>
+    <width>504</width>
     <height>263</height>
    </rect>
   </property>
@@ -186,6 +186,9 @@
  <tabstops>
   <tabstop>lineEditPassword</tabstop>
   <tabstop>createPasswordButton</tabstop>
+  <tabstop>checkBoxShow</tabstop>
+  <tabstop>passwordTemplateSwitch</tabstop>
+  <tabstop>spinBox_pwdLength</tabstop>
   <tabstop>plainTextEdit</tabstop>
  </tabstops>
  <resources/>
