--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -316,7 +316,8 @@ p, li { white-space: pre-wrap; }
   </widget>
   <action name="actionAddPassword">
    <property name="icon">
-    <iconset theme="document-new"/>
+    <iconset theme="document-new">
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>Add password</string>
@@ -330,7 +331,8 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionAddFolder">
    <property name="icon">
-    <iconset theme="folder-new"/>
+    <iconset theme="folder-new">
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>Add folder</string>
@@ -341,7 +343,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionEdit">
    <property name="icon">
-    <iconset theme="edit"/>
+    <iconset theme="document-properties"/>
    </property>
    <property name="text">
     <string>Edit</string>
@@ -352,7 +354,8 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionDelete">
    <property name="icon">
-    <iconset theme="remove"/>
+    <iconset theme="edit-delete">
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>Delete</string>
@@ -363,7 +366,8 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionPush">
    <property name="icon">
-    <iconset theme="go-up"/>
+    <iconset theme="go-up">
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>Push</string>
@@ -374,7 +378,8 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionUpdate">
    <property name="icon">
-    <iconset theme="go-down"/>
+    <iconset theme="go-down">
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>Update</string>
@@ -385,7 +390,8 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionUsers">
    <property name="icon">
-    <iconset theme="x-office-address-book"/>
+    <iconset theme="x-office-address-book">
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>Users</string>
@@ -396,7 +402,8 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionConfig">
    <property name="icon">
-    <iconset theme="settings"/>
+    <iconset theme="applications-system">
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>Config</string>
